# NumGrind

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
CppOptLibTools/: CMakeLists.txt  NumGrindProblem.h
NumGrind/: CMakeLists.txt  GradientDescentSolver.cpp  GraphManager.cpp  GraphManager.h  GraphManagerAbstract.h  SymbolicGraphNode.cpp  SymbolicScalarNode.cpp  SymbolicScalarNode.h  SymbolicScalarNodeOperators.cpp  SymbolicScalarNodeOperators.h  SymbolicTensorNode.cpp  SymbolicTensorNode.h  SymbolicTensorNodeOperators.h  numgrind.h  utils.cpp  utils.h
NumGrind/CompGraph/: CGDotProduct.cpp  CGDotProduct.h  CGMatrixConstant.cpp  CGMatrixConstant.h  CGMatrixElementWiseProduct.cpp  CGMatrixElementWiseProduct.h  CGMatrixMapUnaryFunction.h  CGMatrixProduct.cpp  CGMatrixProduct.h  CGMatrixReduceSum.cpp  CGMatrixReduceSum.h  CGMatrixScalarSum.cpp  CGMatrixScalarSum.h  CGMatrixSub.cpp  CGMatrixSub.h  CGMatrixSum.cpp  CGMatrixSum.h  CGMatrixTranspose.cpp  CGMatrixTranspose.h  CGMatrixVariable.cpp  CGMatrixVariable.h  CGScalarConst.cpp  CGScalarConst.h  CGScalarFunction.cpp  CGScalarFunction.h  CGScalarMult.cpp  CGScalarMult.h  CGScalarOutput.cpp  CGScalarOutput.h  CGScalarSub.cpp  CGScalarSub.h  CGScalarSum.cpp  CGScalarSum.h  CGScalarVariable.cpp  CGScalarVariable.h  CGSumOfSquares.cpp  CGSumOfSquares.h  CGTensorOutput.cpp  CGTensorOutput.h  CGVectorVariable.cpp  (+24 more)
NumGrind/DeepGrind/: ActivationFunctions.h  CGConv2DNode.cpp  CGConv2DNode.h  CGConvolution2DNode.cpp  CGConvolution2DNode.h  CGConvolutionNode.cpp  CGConvolutionNode.h  CMakeLists.txt  Conv2DFilterShape.cpp  Conv2DFilterShape.h  Conv2DParams.cpp  Conv2DParams.h  Utils.cpp  Utils.h  deepgrind.cpp  deepgrind.h
NumGrind/Solvers/: CMakeLists.txt  GradientDescentSolver.cpp  GradientDescentSolver.h  SGDSolver.cpp  SGDSolver.h  SGDWithMomentumSolver.cpp  SGDWithMomentumSolver.h  SolverSettings.h  StochasticGradientDescentSolver.cpp  StochasticGradientDescentSolver.h  checkgradient.cpp  checkgradient.h  numericalgradient.cpp  numericalgradient.h
NumGrind/SymbolicGraph/: CMakeLists.txt  GraphManagerAbstract.cpp  GraphManagerAbstract.h  SymbolicGraphManagerAbstract.cpp  SymbolicGraphManagerAbstract.h  SymbolicGraphNode.cpp  SymbolicGraphNode.h  SymbolicScalarNode.cpp  SymbolicScalarNode.h  SymbolicScalarNodeOperators.cpp  SymbolicScalarNodeOperators.h  SymbolicScalarPlaceholder.cpp  SymbolicScalarPlaceholder.h  SymbolicScalarVariable.cpp  SymbolicScalarVariable.h  SymbolicTensorConstant.cpp  SymbolicTensorConstant.h  SymbolicTensorNode.cpp  SymbolicTensorNode.h  SymbolicTensorNodeOperators.cpp  SymbolicTensorNodeOperators.h  SymbolicTensorPlaceholder.cpp  SymbolicTensorPlaceholder.h  SymbolicTensorVariable.cpp  SymbolicTensorVariable.h
NumGrind/Utils/: CMakeLists.txt  Normalizer.cpp  Normalizer.h  eigenimport.cpp  eigenimport.h  randomutils.cpp  randomutils.h  utils.cpp  utils.h
NumGrind/solvers/: CMakeLists.txt  GradientDescentSolver.cpp  GradientDescentSolver.h  SolverSettings.cpp  SolverSettings.h  StochasticGradientDescentSolver.cpp  StochasticGradientDescentSolver.h  checkgradient.cpp  checkgradient.h  numericalgradient.cpp  numericalgradient.h
data/house_prices/: y_test.txt
examples/: CMakeLists.txt  cppoptlib_example.cpp  houseprice_example.cpp  main.cpp  mnist.cpp  mnist.h  mnist_example.cpp  operators_example.cpp
examples/data/house_prices/: X_test.txt  X_train.txt  y_train.txt
src/: CMakeLists.txt  GNDotProduct.cpp  GNDotProduct.h  GNMatrixConstant.cpp  GNMatrixConstant.h  GNMatrixElementWiseProduct.h  GNMatrixElementsSum.cpp  GNMatrixElementsSum.h  GNMatrixMapUnaryFunction.h  GNMatrixProduct.h  GNMatrixReduceSum.cpp  GNMatrixReduceSum.h  GNMatrixScalarSum.h  GNMatrixSub.cpp  GNMatrixSub.h  GNMatrixSum.cpp  GNMatrixSum.h  GNMatrixTranspose.cpp  GNMatrixTranspose.h  GNMatrixVariable.cpp  GNMatrixVariable.h  GNScalarConst.h  GNScalarFunction.h  GNScalarMult.h  GNScalarOutput.cpp  GNScalarOutput.h  GNScalarSub.cpp  GNScalarSub.h  GNScalarSum.h  GNScalarVariable.cpp  GNScalarVariable.h  GNTensorOutput.cpp  GNTensorOutput.h  GNVectorElementWiseProduct.cpp  GNVectorElementWiseProduct.h  GNVectorElementWiseSum.cpp  GNVectorElementWiseSum.h  GNVectorScalarSum.cpp  GNVectorScalarSum.h  GNVectorVariable.h  (+24 more)
src/CompGraph/: CMakeLists.txt  GNDotProduct.h  GNMatrixConstant.h  GNMatrixElementWiseProduct.h  GNMatrixMapUnaryFunction.h  GNMatrixProduct.cpp  GNMatrixProduct.h  GNMatrixReduceSum.h  GNMatrixScalarSum.cpp  GNMatrixScalarSum.h  GNMatrixSum.h  GNMatrixTranspose.h  GNMatrixVariable.h  GNScalarConst.h  GNScalarSub.h  GNScalarSum.h  GNTensorOutput.h  GNVectorVariable.cpp  GraphNode.h
tests/: CMakeLists.txt  compgraphtests.cpp  compgraphtests.h  deepgrindconv2dtests.cpp  gradientchecktests.cpp  gradientchecktests.h  gtest.cpp  helpers.cpp  helpers.h  propergradientchecktests.cpp  solverstests.cpp  symbolicgraphtests.cpp  symbolicgraphtests.h  testhelpers.cpp  testhelpers.h  utilstests.cpp
